--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>💝 Mon Quiz de Saint-Valentin</title>
+    <title>💝Quiz de Saint-Valentin</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -23,8 +23,8 @@
         <div class="quiz-container" id="quizContainer">
             <!-- Écran de bienvenue -->
             <div class="welcome-screen" id="welcomeScreen">
-                <h2 class="welcome-title">Bienvenue mon amour ! 🌸</h2>
-                <p class="welcome-text">J'ai préparé un petit quiz spécial pour toi...</p>
+                <h2 class="welcome-title">Bienvenue Marjijou ! 🌸</h2>
+                <p class="welcome-text">J'ai préparé un petit quiz spécial rien que pour toi...</p>
                 <button class="btn btn-start" id="startBtn">Commencer 💕</button>
             </div>
 
@@ -44,16 +44,16 @@
 
             <!-- Écran de fin -->
             <div class="end-screen hidden" id="endScreen">
-                <h2 class="end-title">Merci mon cœur ! 💖</h2>
-                <p class="end-text">Tes réponses ont été enregistrées avec amour...</p>
+                <h2 class="end-title">Merci ma Marjijou ! 💖</h2>
+                <p class="end-text">Tes réponses ont bien été enregistrées...</p>
                 <div class="loading" id="loading">
                     <div class="spinner"></div>
-                    <p>Envoi de tes réponses par email... 📧</p>
+                    <p>Envoi de tes réponses à ton Valentin... 📧</p>
                 </div>
                 <div class="success-message hidden" id="successMessage">
                     <div class="success-icon">✨</div>
-                    <p>Email envoyé avec succès ! 💌</p>
-                    <p class="small-text">Vérifie ta boîte mail pour voir ton récapitulatif</p>
+                    <p>Réponses envoyé avec succès ! 💌</p>
+                    <p class="small-text">Tu recevras incessamment sous peu le récapitulatif de demain</p>
                 </div>
                 <div class="error-message hidden" id="errorMessage">
                     <p>Oups ! Une erreur s'est produite 😢</p>
